fix: align lone docs next link to the right (#175)

--- a/docs/assets/css/docs.css
+++ b/docs/assets/css/docs.css
@@ -789,6 +789,10 @@ img {
   text-align: right;
 }
 
+.prev-next > .prev-next__link--next:only-child {
+  grid-column: 2;
+}
+
 .prev-next__direction {
   font-size: 0.76rem;
   text-transform: uppercase;
